# acadexa

./: .gitignore  BACKEND_READY_REPORT.md  README.md  docker-compose.yml  package.json  turbo.json
apps/api/: .env.example  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep
apps/api/app/: main.py
apps/api/app/ai/: __init__.py  client.py
apps/api/app/core/: config.py  dependencies.py  exceptions.py  expert_engine.py  logging.py  middleware.py  rate_limiter.py  security.py  supabase.py
apps/api/app/data_processing/: __init__.py
apps/api/app/db/: base.py  session.py
apps/api/app/expert_system/: __init__.py  engine.py  runner.py
apps/api/app/models/: academic_structure.py  course.py  grade.py  notification.py  recommendation.py  rule.py  student.py  user.py
apps/api/app/repositories/: course_repository.py  recommendation_repository.py  rule_repository.py  student_repository.py
apps/api/app/schemas/: academic_structure.py  ai.py  analysis.py  auth.py  course.py  curriculum.py  department.py  grade_scale.py  import_job.py  recommendation.py  report.py  rule.py  student.py  user.py
apps/api/app/services/: advisor_service.py  ai_service.py  analysis_service.py  auth_service.py  course_service.py  curriculum_service.py  dashboard_service.py  department_service.py  export_service.py  gpa_service.py  grade_scale_service.py  graduation_service.py  import_service.py  notification_service.py  report_service.py  (+2 more)
apps/api/tests/: conftest.py
(+321 files in other folders)
